[tool.poetry]
name = "gpu-speech-metrics"
version = "0.1.0"
description = ""
authors = ["Koen Oostermeijer <koen@oostermeijer.net>"]
readme = "README.md"
packages = [{include = "gpu_speech_metrics"}]

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.6.0"
numpy = "<=2.0" # Needed for dataloading
torch = "^2.7.1"
torchaudio = "^2.7.1"
torchvision = "^0.22.1"
transformers = "^4.52.4"
pkginfo = "^1.12.1.2"
onnx2torch = "^1.5.15"
scipy-stubs = "^1.15.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
pesq = "^0.0.4"
torch-pesq = "^0.1.2"
torchtyping ="^0.1.5"
pystoi = "^0.4.1"
torchmetrics = "^1.7.3"
librosa = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
